Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-175

Log spew after session is closed due to "Invalid or unknown query handle" messages

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 0.7
    • Impala 0.7
    • None
    • None

    Description

      Whenever a session is closed it appears we try to call Close/Cancel any query handles left over from that session. This leads to lots of log spew, even in the case a query was executed successfully.

      For example:

      impala-shell -i localhost -q "select * from table"
      
      Now we get something like this in the impalad log:
      I0401 13:42:19.969763  1391 impala-beeswax-server.cc:329] close(): query_id=2c5ed0ffb1c9496c:bf28ec1c864b5ce3
      I0401 13:42:19.969784  1391 impala-server.cc:1116] UnregisterQuery(): query_id=2c5ed0ffb1c9496c:bf28ec1c864b5ce3
      I0401 13:42:19.969799  1391 impala-server.cc:1415] Cancel(): query_id=2c5ed0ffb1c9496c:bf28ec1c864b5ce3
      I0401 13:42:19.972136  1391 data-stream-mgr.cc:216] DeregisterRecvr(): fragment_id=2c5ed0ffb1c9496c:bf28ec1c864b5ce4, node=1
      I0401 13:42:19.973765  1391 impala-server.cc:1116] UnregisterQuery(): query_id=74f1e7a718fa4e43:97737a0958f1b23b
      I0401 13:42:19.974061  1391 impala-server.cc:1415] Cancel(): query_id=74f1e7a718fa4e43:97737a0958f1b23b
      I0401 13:42:19.989261  1391 status.cc:40] Invalid or unknown query handle
          @           0xc5c552  impala::Status::Status()
          @           0xa641a4  impala::ImpalaServer::CancelInternal()
          @           0xa6032a  impala::ImpalaServer::UnregisterQuery()
          @           0xa64717  impala::ImpalaServer::CloseSessionInternal()
          @           0xae4e5b  impala::ImpalaServer::SessionEnd()
          @           0xba41c1  impala::ThriftServer::ThriftServerEventProcessor::deleteContext()
          @          0x15e0562  apache::thrift::server::TThreadPoolServer::Task::run()
          @          0x15d0c5f  apache::thrift::concurrency::ThreadManager::Task::run()
          @          0x15d36b9  apache::thrift::concurrency::ThreadManager::Worker::run()
          @          0x15e57f6  apache::thrift::concurrency::PthreadThread::threadMain()
          @     0x7f0526184e9a  start_thread
          @     0x7f0524533cbd  (unknown)
      
      

      Attachments

        Activity

          People

            alan@cloudera.com Alan Choi
            lskuff Lenni Kuff
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: