IMPALA-175 fix unregister query